# speedscribble-htn2021

./: .gitignore  LICENSE
backend/: pyproject.toml  pyvenv.cfg  requirements.txt
backend/Scripts/: activate  activate.bat
backend/app/: ML.py  __init__.py  ml.py  models.py  views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  store.js  util.js
frontend/src/components/: Button.js  Canvas.js  Countdown.js  Header.js  Layout.js
frontend/src/components/flow/: Draw.js  Memorize.js  PreGame.js  Results.js
frontend/src/pages/: Game.js  Home.js  Play.js  SignUp.js
frontend2/src/: App.js
frontend2/src/components/: Auth.js  AuthedRoute.js  Header.js
frontend2/src/pages/: Home.js  Login.js
