[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Danny Lin <danny@kdrag0n.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
